// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 1`] = `
<DocumentFragment>
  <div
    data-css-1a5irm0=""
  >
    <strong>
      Hearing Time
    </strong>
    <pre>
      Invalid date Eastern
    </pre>
  </div>
</DocumentFragment>
`;

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 2`] = `
<DocumentFragment>
  <div
    data-css-1a5irm0=""
  >
    <strong>
      Hearing Time
    </strong>
    <pre>
      Invalid date Pacific / Invalid date Eastern
    </pre>
  </div>
</DocumentFragment>
`;

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 3`] = `
<DocumentFragment>
  <div
    data-css-1a5irm0=""
  >
    <strong>
      Hearing Time
    </strong>
    <pre>
      Invalid date Mountain / Invalid date Eastern
    </pre>
  </div>
</DocumentFragment>
`;

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 4`] = `
<DocumentFragment>
  <div
    data-css-1a5irm0=""
  >
    <strong>
      Hearing Time
    </strong>
    <pre>
      Invalid date Central / Invalid date Eastern
    </pre>
  </div>
</DocumentFragment>
`;

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 5`] = `
<DocumentFragment>
  <div
    data-css-1a5irm0=""
  >
    <strong>
      Hearing Time
    </strong>
    <pre>
      Invalid date Indiana (East) / Invalid date Eastern
    </pre>
  </div>
</DocumentFragment>
`;

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 6`] = `
<DocumentFragment>
  <div
    data-css-1a5irm0=""
  >
    <strong>
      Hearing Time
    </strong>
    <pre>
      Invalid date Eastern
    </pre>
  </div>
</DocumentFragment>
`;

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 7`] = `
<DocumentFragment>
  <div
    data-css-1a5irm0=""
  >
    <strong>
      Hearing Time
    </strong>
    <pre>
      Invalid date Pacific / Invalid date Eastern
    </pre>
  </div>
</DocumentFragment>
`;

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 8`] = `
<DocumentFragment>
  <div
    data-css-1a5irm0=""
  >
    <strong>
      Hearing Time
    </strong>
    <pre>
      Invalid date Mountain / Invalid date Eastern
    </pre>
  </div>
</DocumentFragment>
`;

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 9`] = `
<DocumentFragment>
  <div
    data-css-1a5irm0=""
  >
    <strong>
      Hearing Time
    </strong>
    <pre>
      Invalid date Central / Invalid date Eastern
    </pre>
  </div>
</DocumentFragment>
`;

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 10`] = `
<DocumentFragment>
  <div
    data-css-1a5irm0=""
  >
    <strong>
      Hearing Time
    </strong>
    <pre>
      Invalid date Indiana (East) / Invalid date Eastern
    </pre>
  </div>
</DocumentFragment>
`;

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 11`] = `
<DocumentFragment>
  <div
    data-css-1a5irm0=""
  >
    <strong>
      Hearing Time
    </strong>
    <pre>
      Invalid date Eastern
    </pre>
  </div>
</DocumentFragment>
`;

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 12`] = `
<DocumentFragment>
  <div
    data-css-1a5irm0=""
  >
    <strong>
      Hearing Time
    </strong>
    <pre>
      Invalid date Pacific / Invalid date Eastern
    </pre>
  </div>
</DocumentFragment>
`;

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 13`] = `
<DocumentFragment>
  <div
    data-css-1a5irm0=""
  >
    <strong>
      Hearing Time
    </strong>
    <pre>
      Invalid date Mountain / Invalid date Eastern
    </pre>
  </div>
</DocumentFragment>
`;

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 14`] = `
<DocumentFragment>
  <div
    data-css-1a5irm0=""
  >
    <strong>
      Hearing Time
    </strong>
    <pre>
      Invalid date Central / Invalid date Eastern
    </pre>
  </div>
</DocumentFragment>
`;

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 15`] = `
<DocumentFragment>
  <div
    data-css-1a5irm0=""
  >
    <strong>
      Hearing Time
    </strong>
    <pre>
      Invalid date Indiana (East) / Invalid date Eastern
    </pre>
  </div>
</DocumentFragment>
`;
